<resources>
    <string name="app_name">TaDuyHoang_week2</string>
    <string name="label_user_name">User Name: </string>
    <string name="hint_user_name">User Name</string>
    <string name="label_phone_no">Phone No: </string>
    <string name="hint_phone_no">Phone No.</string>
    <string name="label_email">Email Id: </string>
    <string name="hint_email">Email Id</string>
    <string name="cancel_button">Cancel</string>
    <string name="submit_button">Submit</string>
<!--    Relative Layouts-->
    <string name="relative_name">Name</string>
    <string name="relative_address">Address</string>
    <string name="relative_subject">Subject</string>
    <string name="relative_message">Message</string>
</resources>