<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_relative">
    <EditText
        android:id="@+id/name"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:hint="@string/relative_name"
        android:background="@color/background_edit"
        android:padding="18dp"
        android:layout_marginRight="11dp"
        android:singleLine="true"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/address"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@color/background_edit"
        android:hint="@string/relative_address"
        android:padding="18dp"
        android:layout_toRightOf="@id/name"
        android:textStyle="bold"/>
    
    <EditText
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/relative_subject"
        android:textStyle="bold"
        android:layout_below="@id/name"
        android:background="@color/background_edit"
        android:layout_marginTop="20dp"
        android:padding="18dp"
        android:singleLine="true"/>
    
    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/subject"
        android:background="@color/background_edit"
        android:hint="@string/relative_message"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:gravity="top"
        android:padding="18dp"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/submit_button"
        android:background="@color/submit_button"
        android:textColor="@color/white"
        android:textStyle="bold"/>
</RelativeLayout>