<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/first_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/label_user_name"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="22dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/username_input"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:hint="@string/hint_user_name"
            android:textColor="@color/black"
            android:background="@color/background_edit"
            android:paddingLeft="10dp"
            android:textSize="18dp"
            android:layout_marginRight="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/second_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/label_phone_no"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="22dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/phoneno_input"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:hint="@string/hint_phone_no"
            android:textColor="@color/black"
            android:background="@color/background_edit"
            android:paddingLeft="10dp"
            android:textSize="18dp"
            android:layout_marginRight="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/third_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/label_email"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="22dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/email_input"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:hint="@string/hint_email"
            android:textColor="@color/black"
            android:background="@color/background_edit"
            android:paddingLeft="10dp"
            android:textSize="18dp"
            android:layout_marginRight="10dp"
            />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/cancel_button"
            android:textStyle="bold"
            android:background="@color/cancel_button"
            android:textColor="@color/white"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/submit_button"
            android:textStyle="bold"
            android:background="@color/submit_button"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>